[package]
name = "gkvocab_test"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.0", features = ["v4"] }
regex = "1.11.2"
quick-xml = { version="0.38.4", features = []}
unicode-normalization = "0.1.25"
#tokio-postgres = "0.7.15"
#tokio = { version="1.48.0", features = ["full"] }

[lib]
doctest = false
